<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MovieStreaming</string>
    <string name="movie_streaming">Movie Streaming</string>
    <string name="todo">todo</string>
    <string name="top_movie_imdb">Top Movie IMDb</string>
    <string name="arrow"><![CDATA[more >]]></string>
    <string name="new_movie">New Movie</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="animation">Animation</string>
    <string name="genre">Genre</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile_account">Profile Account</string>
    <string name="email">Email :</string>
    <string name="phone">Phone :</string>
    <string name="director">Director: </string>
    <string name="published">Published: </string>
    <string name="series">Series</string>
    <string name="name">Name:</string>
    <string name="action">Action</string>
    <string name="description">Description :</string>
    <string name="cast">Cast :</string>
    <string name="similar_movie">Similar Movie :</string>
    <string name="episodes">Episodes :</string>
    <string name="similar_series">Similar Series</string>
    <string name="search">Search</string>
    <string name="title">title</string>
    <string name="all_category">All Category</string>
    <string name="watch_your_favorite_movie">Watch your favorite movie</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="emailRegister">Email</string>
    <string name="phoneRegister">Phone</string>
    <string name="password">Password</string>
    <string name="have_an_account_loge_in">Have an account? Log in</string>
    <string name="login">login</string>
    <string name="have_no_account_register">Have no account? Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="verify_number">Verify Number</string>
    <string name="send_code">Send Code</string>
    <string name="retry">Retry</string>
    <string name="send_again">Send Again</string>
    <string name="check">Check</string>
</resources>