<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />


        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search" />

        <item
            android:id="@+id/nav_genre"
            android:icon="@drawable/ic_baseline_genre_24"
            android:title="@string/genre" />

        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favorite" />


        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/profile_account" />


    </group>


</menu>