<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activities.LoginActivity">




    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:fontFamily="monospace"
        android:text="@string/movie_streaming"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:fontFamily="monospace"
        android:text="@string/watch_your_favorite_movie"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bg_register"
        android:padding="16dp">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingHorizontal="8dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginTitle"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="4dp"
                android:hint="@string/emailRegister"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/white" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/ic_baseline_phone_iphone_24"
                android:drawablePadding="4dp"
                android:hint="@string/phoneRegister"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/white" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="4dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/registerTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout"
            android:layout_marginTop="32dp"
            android:fontFamily="monospace"
            android:paddingHorizontal="8dp"
            android:text="@string/have_no_account_register"
            android:textColor="@color/yellow"
            android:textSize="12sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerTxt"
            android:layout_marginTop="8dp"
            android:fontFamily="monospace"
            android:paddingHorizontal="8dp"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />



    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:textColor="@color/black"
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_login"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:textSize="16sp"
        android:background="@drawable/bg_btn"
        android:text="@string/login"
        android:textAllCaps="false" />



</RelativeLayout>