<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activities.VerifyPhoneActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:fontFamily="monospace"
        android:text="@string/movie_streaming"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:fontFamily="monospace"
        android:text="@string/verify_phone_number"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/verify_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <RelativeLayout

            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="48dp"
            android:background="@drawable/bg_register"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:paddingHorizontal="8dp"
                android:text="@string/verify_number"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginTitle"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_baseline_phone_iphone_24"
                    android:drawablePadding="4dp"
                    android:hint="@string/phoneRegister"
                    android:inputType="phone"
                    android:padding="8dp"
                    android:maxLength="11"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@color/white" />


            </LinearLayout>


        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_login"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/bg_btn"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/check_code_layout"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <com.chaos.view.PinView
            android:id="@+id/firstPinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="text"
            android:itemBackground="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorColor="@color/yellow"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="false"
            app:itemCount="4"
            app:itemHeight="48dp"
            app:itemRadius="4dp"
            app:itemSpacing="8dp"
            app:itemWidth="48dp"
            app:lineColor="@color/yellow"
            app:lineWidth="2dp"
            app:viewType="rectangle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/send_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginTop="54dp"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/send_again"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/check_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="54dp"
                android:background="@drawable/bg_btn"
                android:text="@string/check"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>