<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Activities.ShowDetailMovieActivity">


    <RelativeLayout
        android:id="@+id/layout_play"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/yellow"
            app:srcCompat="@drawable/ic_baseline_play_circle_filled_24"
            tools:ignore="ContentDescription,RelativeOverlap"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/ic_baseline_get_app_24"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@id/download"
            android:layout_toLeftOf="@id/download"
            app:srcCompat="@drawable/ic_baseline_comment_24"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="ContentDescription" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_play"
        android:layout_marginTop="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg_detail"
                android:padding="16dp">

                <TextView
                    android:id="@+id/name_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/name"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/name_director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_movie"
                    android:layout_marginTop="8dp"
                    android:fontFamily="monospace"
                    android:text="@string/director"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/published"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_director"
                    android:fontFamily="monospace"
                    android:text="@string/published"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


                <LinearLayout
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:textAlignment="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:tint="@color/yellow"
                        app:srcCompat="@drawable/ic_baseline_access_time_24"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/time_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:fontFamily="monospace"
                        android:text="2h 32m"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                </LinearLayout>

                <TextView
                    android:id="@+id/rate_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/published"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_rate_imdb"
                    android:fontFamily="monospace"
                    android:padding="2dp"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:text="IMDb : 8.9/10"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,SmallSp" />

                <TextView

                    android:id="@+id/genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/published"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_genre"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:text="@string/action"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rate_movie"
                    android:layout_marginTop="8dp"
                    android:text="@string/description"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_description"
                    android:layout_marginTop="2dp"
                    android:lineSpacingExtra="4dp"
                    android:paddingTop="2dp"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description"
                    android:layout_marginTop="8dp"
                    android:text="@string/cast"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cast_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_cast"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp" />


            </RelativeLayout>


            <TextView
                android:id="@+id/txt_similar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/similar_movie"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similar_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>