<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">


    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/drawer" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="8dp"
        app:cardElevation="-1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp">

            <TextView
                android:id="@+id/name_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="8dp"
                android:fontFamily="monospace"
                android:text="name movie"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/name_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_movie"
                android:layout_marginTop="8dp"
                android:fontFamily="monospace"
                android:text="@string/director"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/published"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_director"
                android:fontFamily="monospace"
                android:text="@string/published"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:tint="@color/yellow"
                    app:srcCompat="@drawable/ic_baseline_access_time_24" />

                <TextView
                    android:id="@+id/time_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="2h 32m"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

            </LinearLayout>


            <ImageView
                android:id="@+id/like_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_toStartOf="@id/rate_movie"
                android:layout_toLeftOf="@id/rate_movie"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

            <TextView
                android:id="@+id/rate_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_rate_imdb"
                android:fontFamily="monospace"
                android:padding="2dp"
                android:text="IMDb : 8.9/10"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,SmallSp" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>